  EntityUtil.getPropertyValues() re-generified
  EntityUtilTest.isPrimaryKeyModified() added
  Configuration.CLIENT_SCHEDULE_CONNECTION_VALIDATION renamed to CONNECTION_SCHEDULE_VALIDATION, constant changed
  LocalEntityConnectionProvider constructor overloaded with a scheduleValidityCheck parameter
  RemoteEntityConnectionProvider, some refactoring due to the above
  DefaultDatabaseConnection.disconnect(), isValid() call moved within try clause
  DefaultDatabaseConnection.isValid() now uses a hardcoded (1 sec) timeout during validity check instead of 0 (meaning no timeout)
  ServerException.LoginException is no longer final
  ServerException.AuthenticationException added
  EntityConnectionServerTest, no longer uses the default server/registry ports
  MaximumMatch, bug fixed, equalStartLength() did not normalize the strings before matching
  DefaultDatabaseConnection.disconnect() change reverted, calling isValid() is an overkill (especially with a query) when we are about to discard the connection, so we're back to !con.isClosed()
  Entities.Validator no longer validates read-only values
  DefaultDenormalizedViewProperty bug fixed, is now read-only, along with MirrorProperty
  EntityTableCellRenderers refactored
  DefaultDatabaseConnection constructor overloaded with validityCheckTimeout parameter, added to factory classes as well
  Configuration.CONNECTION_VALIDITY_CHECK_TIMEOUT added, default 0 seconds (no timeout)
  DatabaseUtil.validateWithQuery() now guards against databases that have not implemented setQueryTimeout()
  DefaultDatabaseConnection constructor throws exception if the connection parameter is closed
  Configuration.USE_OPTIMISTIC_LOCKING default value changed to true
  DefaultEntityConnection.lockAndCheckForUpdate() bug fixed, now excludes Types.BLOB properties from the modified check
  ColumnSearchPanel.initializeSearchTypeComboBox() bug fixed, SearchType was read-only due to incorrect type parameter in a call to ValueLinks.selectedItemValueLink()